--- a/app/src/main/res/layout/act_attend_detail_info.xml
+++ b/app/src/main/res/layout/act_attend_detail_info.xml
@@ -231,8 +231,8 @@
 
                 <ImageView
                     android:id="@+id/img_org"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"/>
             </RelativeLayout>
 
             <!-- 抓拍图-->
@@ -245,8 +245,8 @@
 
                 <ImageView
                     android:id="@+id/img_cap"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"/>
             </RelativeLayout>
 
 
