--- a/app/src/main/res/layout/act_person_imgbrowse.xml
+++ b/app/src/main/res/layout/act_person_imgbrowse.xml
@@ -7,22 +7,11 @@
     >
 
     <include layout="@layout/topbar_common_itt"/>
-    <TextView
-        android:id="@+id/tv_vip_attend"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_above="@+id/gridview"
-        android:layout_alignParentTop="true"
-        android:gravity="center_vertical"
-        android:paddingLeft="10dp"
-        android:text="VIP"
-        android:textColor="@android:color/black"
-        android:textSize="@dimen/common_textSize_default14"/>
 
     <GridView
         android:id="@+id/gridview"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@+id/tv_vip_attend"
         android:layout_weight="0.4"
         android:columnWidth="90dp"
