--- a/app/src/main/res/layout/act_login_password.xml
+++ b/app/src/main/res/layout/act_login_password.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/login_bg"
+    android:background="@color/topbar_bg"
     android:orientation="vertical"
     android:theme="@android:style/Theme.NoTitleBar"
     >
