--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,7 @@
     <color name="login_text_color_no">#808080</color>
     <color name="scrollView_bg">#f3f3f3</color>
     <color name="cl_text_common">#333333</color>
-
+    <color name="background">#1e95d4</color>
 
     <color name="whitegray">#caeae5e5</color>
     <color name="common_bg_color">#1e82d2</color>
