--- a/app/src/main/res/layout/act_login_password.xml
+++ b/app/src/main/res/layout/act_login_password.xml
@@ -24,7 +24,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center_vertical|center_horizontal"
-            android:background="@mipmap/logo"/>
+            android:background="@mipmap/logo_login"/>
 
     </RelativeLayout>
 
