--- a/app/src/main/res/layout/topbar_main.xml
+++ b/app/src/main/res/layout/topbar_main.xml
@@ -26,7 +26,7 @@
         android:layout_height="@dimen/common_topbar_height"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:text="访客系统"
+        android:text="@string/main_title"
         android:textSize="@dimen/common_textSize_default18"
         android:textColor="#FFF"
         />
