--- a/app/src/main/res/layout/act_door_detail_info.xml
+++ b/app/src/main/res/layout/act_door_detail_info.xml
@@ -202,8 +202,8 @@
 
                 <ImageView
                     android:id="@+id/img_org"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"/>
             </RelativeLayout>
 
             <!-- 抓拍图-->
@@ -216,8 +216,8 @@
 
                 <ImageView
                     android:id="@+id/img_cap"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"/>
             </RelativeLayout>
 
 
